
? - ?
* New bindings :
  * timegm
  * malloc_stats
  * malloc_info
  * read_credentials
  * fexecve
  * sendmsg / readmsg
  * all_pread, single_pread, pread, intr_pread
  * all_pread64, single_pread64, pread64, intr_pread64
  * all_pwrite, single_pwrite, pwrite, intr_pwrite
  * all_pwrite64, single_pwrite64, pwrite64, intr_pwrite64
  * New submodules: EndianBig, EndianLittle, EndianNet, EndianHost
    * New bindings
      * uint16_from_host uint16_to_host
      *  int16_from_host  int16_to_host
      * uint31_from_host uint31_to_host
      *  int31_from_host  int31_to_host
      *  int32_from_host  int32_to_host
      *  int64_from_host  int64_to_host
    * New string functions
      * get_uint8  set_uint8  get_int8  set_int8
      * get_uint16 set_uint16 get_int16 set_int16
      * get_uint31 set_uint31 get_int31 set_int31
      * get_int32  set_int32
      * get_int64 set_int64
* New library ExtUnixBA
  * posix_memalign
  * all_pread, single_pread, pread, intr_pread
  * all_pread64, single_pread64, pread64, intr_pread64
  * all_pwrite, single_pwrite, pwrite, intr_pwrite
  * all_pwrite64, single_pwrite64, pwrite64, intr_pwrite64
  * New submodules: EndianBig, EndianLittle, EndianNet, EndianHost
    * New bigarray functions
      * get_uint8  set_uint8  get_int8  set_int8
      * get_uint16 set_uint16 get_int16 set_int16
      * get_uint31 set_uint31 get_int31 set_int31
      * get_int32  set_int32
      * get_int64 set_int64

0.0.3 - 12 Jul 2011
* Keep unlinkat interface compatible with Netsys
* statvfs : return all fields, use POSIX names
* realpath : fix segfault on non-glibc systems
* New bindings :
  * backtrace
  * setenv unsetenv clearenv
  * linkat symlinkat
  * mkdtemp

0.0.2 - 26 Dec 2010
* New bindings :
  * getrlimit setrlimit
  * getpriority setpriority
  * ptrace (minimal)
  * renameat mkdirat
  * mlockall munlockall
  * strftime strptime asctime
  * tzname
  * posix_openpt grantpt unlockpt ptsname (Niki Yoshiuchi)
  * getsid
  * ctermid